# UEngine

./: .gitignore  CMakeLists.txt
config/: Config.cmake.in
data/shaders/: deferredlight.fs  gbuffer.fs  img.fs  p3t2n3t3.vs
data/test/00_basic/: cubemap.fs
include/UEngine/: Engine.h  SceneMngr.h
src/EMPTY/: CMakeLists.txt
src/core/: CMakeLists.txt  Engine.cpp  SceneMngr.cpp
src/test/00_basic/: main.cpp
src/test/01_uscene/: main.cpp
src/test/02_CornellBox/: main.cpp
